--- a/explore.html
+++ b/explore.html
@@ -130,7 +130,7 @@
         <span id="close-modal-edit" class="close-edit">&times;</span>
         <h2>Edit Element</h2>
         <input type="text" id="edit-element-name" placeholder="Enter new name">
-        <div class="modal-edit-actions">
+        <div class="fe-modal-actions">
             <button id="confirm-edit">Edit</button>
             <button id="cancel-edit">Cancel</button>
         </div>
