--- a/explore.html
+++ b/explore.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/ec873a4572.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./styles/explore.css">
     <title>File Explorer</title>
 </head>
@@ -132,11 +133,11 @@
         <input type="text" id="edit-element-name" placeholder="Enter new name">
         <div class="fe-modal-actions">
             <button id="confirm-edit">Edit</button>
-            <button id="cancel-edit">Cancel</button>
+            <button id="cancel-edit" >Cancel</button>
+
         </div>
     </div>
 </div>
-
 
     <input type="file" id="fe-file-input" style="display:none" multiple>
     <script src="./js/explore.js"></script>
